# EdgeLiteGateway

./: .coverage.json  .dockerignore  .editorconfig  .env.example  .git_commit_msg.txt  .gitattributes  .gitignore  .gitlab-ci.yml  .initial_admin_password  .pre-commit-config.yaml  .read_helper.py  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_FIX_REPORT.md  Dockerfile  EDGE_LITE_ACCEPTANCE_TEST_REPORT.md  EDGE_LITE_COMPREHENSIVE_ANALYSIS_REPORT.md  EDGE_LITE_FIX_REPORT.md  EdgeLite_验收测试报告.md  FINAL_FIX_REPORT.md  FIX_PROMPTS.md  FIX_REPORT.md  LICENSE  Makefile  PROTOCOL_DRIVER_FIX_REPORT.md  Procfile  README.md  README_EN.md  REPAIR_LOG.md  SECURITY.md  SYSTEM_ANALYSIS_REPORT.md  _fix_preprocess_v10.py  _junit.xml  _junit_base.xml  _junit_exc.xml  _junit_full.xml  _junit_full12.xml  _junit_full13.xml  _junit_full2.xml  _junit_full5.xml  (+74 more)
.convergeloop/: intent.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  release.yml
.loopengine/: persisted-workflow.json  stash_ref  workflow.json
.loopengine/checkpoints/: cp_1783235897299_1.json  cp_1783235970052_2.json  cp_1783236041929_3.json  cp_1783236115939_4.json  cp_1783236188097_5.json  cp_1783238517087_6.json  cp_1783238995969_7.json  cp_1783239474880_8.json  cp_1783239958956_9.json
.trae/: rules.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_ai_models.py  003_ai_model_versions.py  004_missing_tables.py  005_password_reset_tables.py  006_rule_templates_device_groups.py  007_rules_add_updated_at.py  008_alarm_silences_table.py  009_ai_logs_indexes_and_sessions.py  010_rule_versions.py  011_rule_script_columns.py  012_round6_7_schema_changes.py  013_unify_rule_type_constraint.py
audit_reports/: audit_report_20260629T012134Z.json  audit_report_20260629T012134Z.md  audit_report_20260629T015137Z.json  audit_report_20260629T015137Z.md  audit_report_20260629T071306Z.json  audit_report_20260629T071306Z.md  audit_report_20260629T120306Z.json  audit_report_20260629T120306Z.md
audit_reports/protocol_verification_20260619/: protocol_availability_report.md  test_protocol_availability.py  test_protocol_mock_simulation.py
configs/: config.example.yaml
docker/: .env.example  Dockerfile  alertmanager.yml  alerts.yml  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  loki-config.yml  mosquitto.conf  nginx-frontend.conf  prometheus.yml  promtail-config.yml
docker/grafana/dashboards/: edgelite-overview.json
docs/: ACCEPTANCE_GATE_REPORT.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  USER_GUIDE.md  api_contract.md
docs/articles/: 01-为什么我用Python重写了一个边缘网关.md  02-22种工业协议一个Python网关全搞定.md  03-10分钟从零搭建工业告警系统.md  04-边缘网关性能调优实战.md
docs/superpowers/specs/: 2026-06-11-i18n-full-audit-design.md
e2e/: conftest.py  test_e2e_smoke.py
edgelite-bugfix-report/: edgelite-bugfix-report.html
helm/edgelite/: Chart.yaml  values.yaml
helm/edgelite/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  secret.yaml  service.yaml
models/: elg-battery-v1.onnx  elg-leak-v1.onnx  elg-power-v1.onnx  elg-quality-v1.onnx  elg-threshold-v1.onnx  generate_preset_models.py
nginx/: bt-panel.md  edgelite.conf
reports/: architecture-dependency-report.json
scripts/: acceptance_check.py  backup.sh  check_api_contract.py  check_architecture.py  check_deps_consistency.py  check_i18n_coverage.py  compare_config.py  gen_api_contract_doc.py  generate_lockfile.ps1  generate_lockfile.sh  init_db.py  restore.sh  smoke_test.ps1  smoke_test.py  smoke_test.sh  smoke_test_routes.py  start.bat  start.sh  test_api.py  test_core.py
src/edgelite/: __init__.py  __main__.py  app.py  bootstrap.py  config.py  config_reload.py  constants.py  error_codes.py  packet_recorder.py  protocol_keys.py  utils.py
src/edgelite/_cython/: __init__.py  modbus_mapper.pyx  modbus_mapper_py.py  rule_compare.pyx  rule_compare_py.py
src/edgelite/ai_models/: elg-anomaly-v1.onnx  elg-trend-v1.onnx  elg-vibration-v1.onnx
src/edgelite/api/: __init__.py  ai_models.py  alarms.py  anomaly_learner.py  audit.py  auth.py  config_version.py  data.py  data_quality.py  db_monitor.py  debug.py  deps.py  device_linkage.py  devices.py  drivers.py  error_codes.py  expressions.py  firmware_signature.py  grafana.py  health.py  integration.py  log_aggregation.py  mcp.py  metrics.py  modbus_slave.py  mqtt_forwarder.py  mqtt_server.py  notify.py  observability.py  ota.py  platforms.py  preprocess.py  profiler.py  protocol_bridge.py  resource_shares.py  rules.py  scada.py  scripts.py  serial_bridge.py  services.py  (+7 more)
src/edgelite/drivers/: __init__.py  abb_robot.py  allen_bradley.py  bacnet.py  barcode_scanner.py  base.py  (+50 more)
stubs/asyncua/: __init__.pyi
test-results/: smoke-results.xml
test_reports_test/: acceptance_junit.xml  acceptance_junit_final.xml  acceptance_junit_fixed.xml
tests/: conftest.py  test_500_404_fixes.py  test_abb_robot.py  test_abb_robot_auto.py  test_acceptance_api.py  test_acceptance_compatibility.py  test_acceptance_functional.py  test_acceptance_performance.py  test_acceptance_security.py  test_acceptance_smoke.py  test_ai_inference_cache.py  test_ai_service.py  test_alarm_service.py  test_alarm_service_ext.py  test_allen_bradley.py  test_allen_bradley_auto.py  test_allen_bradley_ext.py  test_api_alarms.py  test_api_auth.py  test_api_contract.py  test_api_debug.py  test_api_devices.py  test_api_drivers.py  test_api_grafana.py  test_api_health.py  test_api_integration.py  test_api_mcp.py  test_api_metrics.py  test_api_notify.py  test_api_platforms.py  test_api_rules.py  test_api_services.py  test_api_system.py  test_api_users.py  test_app.py  test_audit_service.py  test_auth_auto.py  test_backpressure.py  test_backup_scheduler.py  test_bacnet.py  (+158 more)
web/: .env.example  check_all_t.cjs  check_t_keys.cjs  check_t_keys2.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.vue  main.ts
(+182 files in other folders)
