[build-system]
requires = ["setuptools>=68.0", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edgelite"
version = "1.0.0"
description = "EdgeLiteGateway - 轻量级边缘计算物联网网关 (Community Edition)"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.11"
authors = [
    {name = "suoten", email = "suoten@163.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: IoT",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "influxdb-client[async]>=1.44.0",
    "pymodbus>=3.7.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "psutil>=5.9.0",
    "aiomqtt>=2.1.0",
    "asyncua>=1.1.0",
    "sparkplugb>=0.3.0",
    "python-dotenv>=1.0.0",
    "pyserial>=3.5",
    "amqtt>=0.11.0b0",
]

[project.urls]
Homepage = "https://github.com/suoten/EdgeLiteGateway"
Documentation = "https://github.com/suoten/EdgeLiteGateway#readme"
Repository = "https://github.com/suoten/EdgeLiteGateway"
Issues = "https://github.com/suoten/EdgeLiteGateway/issues"

[project.optional-dependencies]
cython = [
    "Cython>=3.0.0",
]
all = [
    "edgelite[opcua,mqtt,cython]",
]
opcua = [
    "asyncua>=1.1.0",
]
mqtt = [
    "aiomqtt>=2.1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
]

[project.scripts]
edgelite = "edgelite.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["B008", "B027", "N812", "N813", "N814"]

[tool.ruff.lint.per-file-ignores]
"src/edgelite/drivers/*.py" = ["F401"]
"src/edgelite/engine/*.py" = ["F401"]
"src/edgelite/platform/*.py" = ["F401"]
"scripts/*.py" = ["F401"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingModuleSource = "none"
reportArgumentType = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalCall = "warning"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
